--- a/src/styles/construction-placeholder.scss
+++ b/src/styles/construction-placeholder.scss
@@ -7,7 +7,7 @@ a {
   box-sizing: content-box;
   background-color: Theme.$tertiaryCherry;
   border: 5px solid Theme.$tertiaryCherry;
-  border-radius: Theme.$button-radius;
+  border-radius: Theme.$buttonRadius;
   text-decoration: none;
   color: white;
   cursor: pointer;
