--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -46,6 +46,11 @@ h1.title {
   font-size: 40px;
 }
 
+b {
+  font-weight: 700;
+  margin: 0 !important;
+}
+
 a {
   text-decoration: none;
   &:hover {
