Fix!: Enlarge viewport for phones. Shrink viewport for tablets.
Refactor: Button radius based on rems to scale with text.

--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -17,14 +17,15 @@ $black: #333;
 
 // Sizing
 $tabletViewport: 1200px;
-$phoneViewport: 650px;
+$phoneViewport: 750px;
 $microViewport: 300px;
 
 // Spacing
 $spaceBetweenElements: 30px;
 
 //Etc
-$buttonRadius: 14px;
+$buttonRadius: 0.875rem; // 14px
+$bigButtonRadius: 2rem; // 32px
 
 .headshot {
   max-width: 292px;
