--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,6 +10,11 @@ html * {
   box-sizing: border-box; // who knows. It might be a good practice.
 }
 
+// Oreo focus for better accessibility
+:focus-visible {
+  outline: 9px double Theme.$darkSecondaryGreen;
+  box-shadow: 0 0 0 6px Theme.$lightSecondaryGreen;
+}
 html {
   width: fit-content;
   height: fit-content;
