--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -34,3 +34,10 @@
   justify-content: $justify;
   align-items: $align;
 }
+
+@mixin setDropShadow($color, $scale:1px) {
+  $x: calc(8px + $scale);
+  $y: calc(11px + $scale);
+  filter: drop-shadow($x $y 15px $color);
+}
+
