Fix: Tightening up on media queries.

--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -32,8 +32,9 @@ $black: #333;
 // Sizing
 $tabletViewport: 1200px;
 $LgPhoneViewport: 750px;
-$SmPhoneViewport: 385px;
+$SmPhoneViewport: 390px;
 $microViewport: 300px;
+// Smallest allowable width is currently 96px
 
 // Spacing
 $spaceBetweenElements: 30px;
