Style: Improves tab menu buttons.

--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -44,10 +44,10 @@
 
 // This will eventually be replaced by the same GSAP animation being
 // used in the adoption button.
-@mixin temporaryScaleOnHover(){
+@mixin temporaryScaleOnHover($scale: 1.07){
       transition: transform 0.1s;
       &:hover {
-        transform: scale(1.07);
+        transform: scale($scale);
         @content
       }
 }
