Style: Make clickable elements more obvious.

--- a/src/styles/dog-about.module.scss
+++ b/src/styles/dog-about.module.scss
@@ -46,9 +46,17 @@ article.mainDog {
   }
 }
 
+#Headshots_Lg {
+  box-shadow: revert;
+}
+
 #Headshots_Sm {
   @include Mixins.mediaQuery(Theme.$tabletViewport) {
     margin-top: Theme.$spaceBetweenElements;
+  }
+  @include Mixins.setBoxShadow(black);
+  &:active {
+    box-shadow: none;
   }
 }
 
